# everything-fact-checked

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FACTCHECK.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_claim_type.md
.github/workflows/: ci.yml
.well-known/: README.md  agent.json
action/: action.yml
docs/promo/: dev-to.md  newsletter-pitch.md  reddit-claudeai.md  reddit-localllama.md  twitter-thread.md  zhihu.md
examples/: evidence-sample.json  expected-fact-check.md  sample-report.md
promo/: CHANNELS.md  ai-directories.md  channels-research.md  dev-to.md  discord-general.md  hacker-news.md  indie-hackers.md  jike.md  linkedin.md  real-factcheck-demo.md  reddit-datascience.md  v2ex.md
schemas/: evidence.schema.json
scripts/: check_links.py  check_versions.py  extract_claims.py  validate_evidence.py  verify_source.py
skills/fact-check/: SKILL.md  SKILL.standalone.md
src/efc/: __init__.py  _check_links.py  _extract_claims.py  _validate_evidence.py  _verify_source.py  cli.py
src/efc/schemas/: evidence.schema.json
tests/: test_check_links.py  test_cli.py  test_examples.py  test_extract_claims.py  test_validate_evidence.py  test_verify_source.py
tests/fixtures/: mini-report.md
